--- a/WpfPeriodPicker/App.xaml
+++ b/WpfPeriodPicker/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WpfDateTimePicker.App"
+﻿<Application x:Class="WpfPeriodPicker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
