--- a/WpfPeriodPicker/MainWindow.xaml
+++ b/WpfPeriodPicker/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfDateTimePicker.MainWindow"
+﻿<Window x:Class="WpfPeriodPicker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow"
@@ -10,11 +10,10 @@
                 Height="23"
                 HorizontalAlignment="Left"
                 Margin="197,30,0,0"
-                Name="button1"
                 VerticalAlignment="Top"
                 Width="75"
                 Click="button1_Click" />
-        <my:DateTimePicker x:Name="DateTimePicker" HorizontalAlignment="Left"
+        <my:PeriodPicker x:Name="PeriodPicker" HorizontalAlignment="Left"
                            Margin="23,30,0,0"
                            VerticalAlignment="Top"
                            Height="25"
