--- a/WpfControls.PeriodPicker/View/PeriodPickerPopupView.xaml
+++ b/WpfControls.PeriodPicker/View/PeriodPickerPopupView.xaml
@@ -10,12 +10,13 @@
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
         <Style x:Key="BaseButtonStyle" TargetType="Button">
-            <Setter Property="Width" Value="40"/>
-            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Width" Value="50"/>
+            <Setter Property="Height" Value="40"/>
             <Setter Property="Background" Value="#FFFFFF"/>
             <Setter Property="Foreground" Value="#333333"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Margin" Value="0,2"/>
+            <Setter Property="Margin" Value="0,7"/>
             <Setter Property="Cursor" Value="Hand"/>
             <Setter Property="Template">
                 <Setter.Value>
@@ -54,12 +55,16 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <Border BorderBrush="#FF93C2F8" BorderThickness="1">
-        <Grid Background="White">
+    <Border BorderBrush="#DDDDDD" BorderThickness="1,1,1,1">
+        <!--<Border.Effect>
+            <DropShadowEffect BlurRadius="10" Color="#000000" Direction="170" Opacity="0.4" RenderingBias="Performance" ShadowDepth="0"/>
+        </Border.Effect>-->
+        <Grid Background="#ffffff">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
-                <RowDefinition Height="122"/>
-                <RowDefinition Height="37"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="1"/>
+                <RowDefinition Height="40"/>
             </Grid.RowDefinitions>
             <Grid Grid.Row="0" Background="#3dbaf0">
                 <Grid.ColumnDefinitions>
@@ -131,7 +136,7 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <userControls:CustomCellButton Grid.Column="0" Content="{Binding Cell1DisplayName}" Visibility="{Binding IsCell1Enable,Converter={StaticResource BooleanToVisibilityConverter}}" InputValue="{Binding Cell1Value}" PeriodId="{Binding Cell1Id}" Click="CellButton_OnClick" Margin="4,0,0,0">
+                            <userControls:CustomCellButton Grid.Column="0" Content="{Binding Cell1DisplayName}" Visibility="{Binding IsCell1Enable,Converter={StaticResource BooleanToVisibilityConverter}}" InputValue="{Binding Cell1Value}" PeriodId="{Binding Cell1Id}" Click="CellButton_OnClick" Margin="4,7,0,7">
                                 <userControls:CustomCellButton.Style>
                                     <Style TargetType="Button" BasedOn="{StaticResource BaseButtonStyle}">
                                         <Style.Triggers>
@@ -167,7 +172,7 @@
                                     </Style>
                                 </userControls:CustomCellButton.Style>
                             </userControls:CustomCellButton>
-                            <userControls:CustomCellButton Grid.Column="3" Content="{Binding Cell4DisplayName}" Visibility="{Binding IsCell4Enable,Converter={StaticResource BooleanToVisibilityConverter}}" InputValue="{Binding Cell4Value}" PeriodId="{Binding Cell4Id}" Click="CellButton_OnClick" Margin="0,0,8,0">
+                            <userControls:CustomCellButton Grid.Column="3" Content="{Binding Cell4DisplayName}" Visibility="{Binding IsCell4Enable,Converter={StaticResource BooleanToVisibilityConverter}}" InputValue="{Binding Cell4Value}" PeriodId="{Binding Cell4Id}" Click="CellButton_OnClick" Margin="0,7,8,7">
                                 <userControls:CustomCellButton.Style>
                                     <Style TargetType="Button" BasedOn="{StaticResource BaseButtonStyle}">
                                         <Style.Triggers>
@@ -183,21 +188,25 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Grid.Row="2" Content="清除" Width="55" Height="25" Margin="0,0,0,8" Click="ClearButton_OnClick" BorderThickness="1" BorderBrush="#e0e1e6" Background="#FFFFFF" FontSize="12">
+            <Border Grid.Row="2" BorderThickness="0,1,0,0" BorderBrush="#dddddd"/>
+            <Button Grid.Row="3" Content="清除" Width="55" Height="24" Click="ClearButton_OnClick" FontSize="12" BorderThickness="1">
                 <Button.Style>
                     <Style TargetType="Button">
-                        <Setter Property="Foreground" Value="#343437"/>
+                        <Setter Property="BorderBrush" Value="#DDDDDD"/>
+                        <Setter Property="Background" Value="#FFFFFF"/>
+                        <Setter Property="Foreground" Value="#555555"/>
                         <Setter Property="Cursor" Value="Hand"/>
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="Button">
-                                    <Border Name="PART_BORDER" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="3" Background="{TemplateBinding Background}">
+                                    <Border Name="PART_BORDER" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="1" Background="{TemplateBinding Background}">
                                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     </Border>
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Foreground" Value="#3dbaf0"/>
-                                            <Setter TargetName="PART_BORDER" Property="BorderBrush" Value="#3dbaf0"/>
+                                            <Setter Property="Foreground" Value="#2aa2d6"/>
+                                            <Setter Property="BorderBrush" Value="#2aa2d6"/>
+                                            <!--<Setter TargetName="PART_BORDER" Property="BorderBrush" Value="#3dbaf0"/>-->
                                         </Trigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
