--- a/WpfControls.PeriodPicker/View/PeriodPicker.xaml
+++ b/WpfControls.PeriodPicker/View/PeriodPicker.xaml
@@ -32,17 +32,39 @@
                     <Setter Property="VerticalAlignment" Value="Stretch"/>
                     <Setter Property="BorderBrush" Value="#b6b6b6"/>
                     <Setter Property="BorderThickness" Value="1"/>
-                    <Setter Property="Validation.ErrorTemplate">
+                    <Setter Property="Template">
                         <Setter.Value>
-                            <ControlTemplate>
-                                <DockPanel>
-                                    <Border BorderBrush="Red" BorderThickness="1" UseLayoutRounding="False">
-                                        <AdornedElementPlaceholder UseLayoutRounding="True"/>
-                                    </Border>
-                                </DockPanel>
+                            <ControlTemplate TargetType="TextBox">
+                                <Border x:Name="PART_Border" BorderBrush="#b6b6b6" BorderThickness="1" Background="#ffffff">
+                                    <ScrollViewer x:Name="PART_ContentHost" VerticalAlignment="{TemplateBinding VerticalAlignment}" UseLayoutRounding="True"/>
+                                </Border>
+
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="PART_Border" Property="BorderBrush" Value="#49a9de"/>
+                                    </Trigger>
+                                    <Trigger Property="IsFocused" Value="True">
+                                        <Setter TargetName="PART_Border" Property="BorderBrush" Value="#49a9de"/>
+                                    </Trigger>
+                                    <Trigger Property="IsEnabled" Value="False">
+                                        <Setter  TargetName="PART_Border" Property="Background" Value="#f5f5f5"/>
+                                        <Setter  TargetName="PART_Border" Property="BorderBrush" Value="#dddddd"/>
+                                        <Setter Property="Foreground" Value="#999999"/>
+                                    </Trigger>
+                                    <Trigger Property="IsReadOnly" Value="True">
+                                        <Setter TargetName="PART_Border" Property="Background" Value="#f5f5f5"/>
+                                        <Setter TargetName="PART_Border" Property="BorderBrush" Value="#dddddd"/>
+                                        <Setter Property="Foreground" Value="#999999"/>
+                                        <Setter Property="Background" Value="#F5F5F5"/>
+                                    </Trigger>
+                                    <Trigger Property="Validation.HasError" Value="True">
+                                        <Setter TargetName="PART_Border" Property="BorderBrush" Value="Red"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
+                    <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
                 </Style>
             </TextBox.Style>
         </TextBox>
